crates/nash-can/src/snapshots/nash_can__module__tests__interface_from_module_closed_union.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Bool)\n\ntype Bool\n    = True\n    | False\n"
---
Interface {
    declared: DeclaredStore {
        refinements: 0,
        ..
    },
    impls: [],
    traits: [],
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [],
    unions: [
        InterfaceUnion {
            kind: Type,
            context: [],
            name: "Bool",
            parameters: [],
            ctors: [
                Ctor {
                    labels: None,
                    name: "True",
                    index: 0,
                    arity: 0,
                    arguments: [],
                },
                Ctor {
                    labels: None,
                    name: "False",
                    index: 1,
                    arity: 0,
                    arguments: [],
                },
            ],
            alternatives: 2,
            options: Enum,
            visibility: Closed,
            data_layout: None,
        },
    ],
    binops: [],
}
