crates/nash-can/src/snapshots/nash_can__module__tests__interface_from_module_mixed_visibility.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (PublicAlias)\n\ntype alias PublicAlias 'a = 'a\n\ntype alias PrivateAlias 'a = 'a\n\ntype PrivateUnion\n    = Foo\n    | Bar\n"
---
Interface {
    impls: [],
    traits: [],
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [
        InterfaceAlias {
            kind: Arrow(
                Type,
                Type,
            ),
            context: [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 29,
                                },
                                end: Position {
                                    line: 3,
                                    column: 31,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
            name: "PublicAlias",
            parameters: [
                "a",
            ],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 29,
                    },
                    end: Position {
                        line: 3,
                        column: 31,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            visibility: Public,
        },
        InterfaceAlias {
            kind: Arrow(
                Type,
                Type,
            ),
            context: [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 30,
                                },
                                end: Position {
                                    line: 5,
                                    column: 32,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
            name: "PrivateAlias",
            parameters: [
                "a",
            ],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 30,
                    },
                    end: Position {
                        line: 5,
                        column: 32,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            visibility: Private,
        },
    ],
    unions: [
        InterfaceUnion {
            kind: Type,
            context: [],
            name: "PrivateUnion",
            parameters: [],
            ctors: [
                Ctor {
                    labels: None,
                    name: "Foo",
                    index: 0,
                    arity: 0,
                    arguments: [],
                },
                Ctor {
                    labels: None,
                    name: "Bar",
                    index: 1,
                    arity: 0,
                    arguments: [],
                },
            ],
            alternatives: 2,
            options: Enum,
            visibility: Private,
        },
    ],
    binops: [],
}
