crates/nash-can/src/snapshots/nash_can__module__tests__interface_from_module_open_exports.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias pair 'a 'b = ('a, 'b)\n\ntype Maybe 'a\n    = Just 'a\n    | Nothing\n"
---
Interface {
    impls: [],
    traits: [],
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [
        InterfaceAlias {
            kind: Arrow(
                Type,
                Arrow(
                    Type,
                    Type,
                ),
            ),
            context: [],
            name: "pair",
            parameters: [
                "a",
                "b",
            ],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 25,
                    },
                    end: Position {
                        line: 3,
                        column: 33,
                    },
                },
                value: Tuple {
                    first: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 26,
                            },
                            end: Position {
                                line: 3,
                                column: 28,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                    second: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 30,
                            },
                            end: Position {
                                line: 3,
                                column: 32,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    rest: [],
                },
            },
            visibility: Public,
        },
    ],
    unions: [
        InterfaceUnion {
            kind: Arrow(
                Type,
                Type,
            ),
            context: [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 12,
                                },
                                end: Position {
                                    line: 6,
                                    column: 14,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
            name: "Maybe",
            parameters: [
                "a",
            ],
            ctors: [
                Ctor {
                    labels: None,
                    name: "Just",
                    index: 0,
                    arity: 1,
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 12,
                                },
                                end: Position {
                                    line: 6,
                                    column: 14,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Ctor {
                    labels: None,
                    name: "Nothing",
                    index: 1,
                    arity: 0,
                    arguments: [],
                },
            ],
            alternatives: 2,
            options: Normal,
            visibility: Open,
        },
    ],
    binops: [],
}
