crates/nash-can/src/snapshots/nash_can__module__tests__interface_from_module_with_binops.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((|>))\n\ninfix left 6 (|>) = apR\n\napR x f = f x\n"
---
Interface {
    declared: DeclaredStore {
        refinements: 0,
        ..
    },
    impls: [],
    traits: [],
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [],
    unions: [],
    binops: [
        InterfaceBinop {
            symbol: "|>",
            annotation: Annotation {
                context: [],
                free_vars: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
            associativity: Left,
            precedence: Precedence(
                6,
            ),
            function: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "apR",
            },
        },
    ],
}
