crates/nash-can/src/snapshots/nash_can__module__tests__interface_non_exported_binop.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (foo)\n\ninfix left 6 (|>) = apR\n\napR x f = f x\n\nfoo = 42\n"
---
Interface {
    declared: DeclaredStore {
        refinements: 0,
        ..
    },
    impls: [],
    traits: [],
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [
        InterfaceValue {
            name: "foo",
            annotation: Annotation {
                context: [],
                free_vars: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
            callable: None,
        },
    ],
    aliases: [],
    unions: [],
    binops: [],
}
