crates/nash-can/src/snapshots/nash_can__module__tests__keyword_expression_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nvalue = assert True\n"
---
[
    Unsupported {
        feature: "keyword expression",
        region: Region {
            start: Position {
                line: 3,
                column: 9,
            },
            end: Position {
                line: 3,
                column: 20,
            },
        },
    },
]
